[package]
name = "stable-arena"
description = "rustc's arena, adapted for stable Rust"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = [
    "The Rust Project Developers",
    "Thomas Kehrenberg <tmke8@posteo.net>",
]
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/tmke8/stable-arena"
keywords = ["arena", "allocator"]
categories = ["memory-management"]
readme = "README.md"

[dependencies]
smallvec = { version = "1.8.1", features = ["union"] }
